ipc/ipdl/test/ipdl/error/undeclParamType.ipdl
protocol undeclParamType {

child:  Msg(FARGLEGARGLE p);

};
